--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -145,9 +145,10 @@
                             press="onPressSignupBtn"
                             class="onSignupClassBtn"
                         />
-                        <Link
+                        <Button
                             id="idLinkPassword"
                             text="Forgot Password"
+                            press="onForgotPassword"
                             class="onForgotPassword"
                         />
                     </HBox>
